# youtube-translator-openai

./: .gitignore  push_to_github.sh  share_mp3.sh
.opencode/agent/: ask.md
output/: README.md
youtube-translator/: GUIDE_CONFIGURATION.md  README.md  STATUS.md  config.py  demo.sh  list_output.sh  main.py  play_audio.sh  pyproject.toml  setup_google_cloud.sh  setup_keys.sh  test_quick.py  test_simple.py  test_translation.py  translate.sh  translate_complete.sh  translate_youtube.py  translate_youtube_complete.py
youtube-translator/tests/: test_api_connection.py
